more pattern matching

--- a/pattern_matching.ipynb
+++ b/pattern_matching.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Neat C# features\n",
+    "# Pattern matching\n",
+    "https://docs.microsoft.com/en-us/dotnet/csharp/fundamentals/functional/pattern-matching\n",
+    "https://docs.microsoft.com/en-us/dotnet/csharp/language-reference/operators/patterns#relational-patterns\n",
     "\n",
     "## Null checks\n",
     "\n",
@@ -136,11 +138,10 @@
    },
    "outputs": [
     {
-     "ename": "Error",
-     "evalue": "(15,10): error CS0029: Cannot implicitly convert type '<throw expression>' to 'void'",
-     "output_type": "error",
-     "traceback": [
-      "(15,10): error CS0029: Cannot implicitly convert type '<throw expression>' to 'void'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "System is running\r\n"
      ]
     }
    ],
@@ -163,7 +164,137 @@
     "        Status.Stopped => \"System is stopped\",\n",
     "        _ => \"Invalid status\"\n",
     "    };\n",
-    "}"
+    "}\n",
+    "Console.WriteLine(CheckStaus(e));"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Relational patterns\n",
+    "You can compare values to constants using relational patterns. This code also shows the conjunctive `and` logical pattern. This combines two or more relational patterns to match. You can also use a disjunctive `or` pattern to check if either match. The parenthesis are only for clarity."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "liquid\r\n",
+      "solid\r\n",
+      "solid/liquid transition\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "string State(int temperature) => \n",
+    "temperature switch\n",
+    "{\n",
+    "    (> 0) and (< 100) => \"liquid\",\n",
+    "    < 0 => \"solid\",\n",
+    "    > 100 => \"gas\",\n",
+    "    0 => \"solid/liquid transition\",\n",
+    "    100 => \"liquid/gas transition\" \n",
+    "};\n",
+    "Console.WriteLine(State(10));\n",
+    "Console.WriteLine(State(-1));\n",
+    "Console.WriteLine(State(0));"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Multiple inputs\n",
+    "You don't have to limit yourself to checking one value or property, you can check many too!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "liquid\r\n",
+      "gas\r\n",
+      "liquid\r\n",
+      "solid\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "private record Temperature(int Degrees, string Type);\n",
+    "private string State(Temperature t) =>\n",
+    "t switch\n",
+    "{\n",
+    "    (Degrees: (>= 0) and (< 100), Type: \"celsius\") or (Degrees: (>= 32) and (< 212), Type: \"faherenheit\") => \"liquid\",\n",
+    "    (Degrees: < 0, Type: \"celsius\") or (Degrees: < 32, Type: \"faherenheit\") => \"solid\",\n",
+    "    (Degrees: > 100, Type: \"celsius\") or (Degrees: > 212, Type: \"faherenheit\") => \"gas\",\n",
+    "    _ => \"I only know celsius and faherenheit\"\n",
+    "};\n",
+    "Console.WriteLine(State(new Temperature(2, \"celsius\")));\n",
+    "Console.WriteLine(State(new Temperature(213, \"faherenheit\")));\n",
+    "Console.WriteLine(State(new Temperature(19, \"celsius\")));\n",
+    "Console.WriteLine(State(new Temperature(19, \"faherenheit\")));\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A record type has a deconstruct method and doesn't have to be used with property names, this is called positional pattern."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "liquid\r\n",
+      "gas\r\n",
+      "liquid\r\n",
+      "solid\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "private record Temperature(int Degrees, string Type);\n",
+    "private string State(Temperature t) =>\n",
+    "t switch\n",
+    "{\n",
+    "    ((>= 0) and (< 100), \"celsius\") or ((>= 32) and (< 212), \"faherenheit\") => \"liquid\",\n",
+    "    (< 0, \"celsius\") or (< 32, \"faherenheit\") => \"solid\",\n",
+    "    (> 100, \"celsius\") or (> 212, \"faherenheit\") => \"gas\",\n",
+    "    _ => \"I only know celsius and faherenheit\"\n",
+    "};\n",
+    "Console.WriteLine(State(new Temperature(2, \"celsius\")));\n",
+    "Console.WriteLine(State(new Temperature(213, \"faherenheit\")));\n",
+    "Console.WriteLine(State(new Temperature(19, \"celsius\")));\n",
+    "Console.WriteLine(State(new Temperature(19, \"faherenheit\")));"
    ]
   }
  ],
